tries to implement sass

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- icon in browser tab -->
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
     <title>DeTour</title>
   </head>
   <body>
